Added the main business postcode

--- a/app/views/fetf/application/v1-0/about-items/equipment-address.html
+++ b/app/views/fetf/application/v1-0/about-items/equipment-address.html
@@ -29,7 +29,7 @@
           <div class="govuk-radios__item">
             <input class="govuk-radios__input" id="willYouStoreAtBusinessAddress" name="willYouStoreAtBusinessAddress" type="radio" value="yes">
             <label class="govuk-label govuk-radios__label" for="willYouStoreAtBusinessAddress">
-              Yes, at the main business address
+              Yes, it will be stored at B43 5LP
             </label>
           </div>
           <div class="govuk-radios__item">
