--- a/app/views/fetf/claim/v1-0/tray-filler2.html
+++ b/app/views/fetf/claim/v1-0/tray-filler2.html
@@ -110,54 +110,12 @@ function showVisualEvidenceSection() {
 
 <body>
 
-<div class="govuk-grid-row">
-<div class="govuk-grid-column-two-thirds">
-
-  
-
-  <p class="govuk-label govuk-label--m">Invoices</p>
-  <p class="govuk-body">For example, invoices, receipts and bank statements (you can cross out other transactions)</p>
-  <p class="govuk-body" style="color: #505A5F;">Supported file types are PDF, DOC, DOCX, XLS, XLSX or JPG. Maximum file size is 20MB.</p><br>
-
-
-  <div id="filesAddedContainer" style="display: none;">
-      <p class="govuk-label govuk-label--s">Files added</p><br>
-      <div style="display: flex; justify-content: space-between; align-items: center;">
-          <p class="govuk-body" style="margin-bottom: 0;">Financial evidence 1.pdf , 3MB</p>
-          <p class="govuk-body" style="margin-bottom: 0;"><a href="#" class="govuk-link">Delete file</a></p>
-      </div>
-      <hr style="margin: 20px 0;">
-      <div style="display: flex; justify-content: space-between; align-items: center;">
-          <p class="govuk-body" style="margin-bottom: 0;">Financial evidence 2.pdf , 3MB</p>
-          <p class="govuk-body" style="margin-bottom: 0;"><a href="#" class="govuk-link">Delete file</a></p>
-      </div>
-      <hr style="margin: 20px 0;">
-      <div style="display: flex; justify-content: space-between; align-items: center;">
-          <p class="govuk-body" style="margin-bottom: 0;">Financial evidence 3.pdf , 3MB</p>
-          <p class="govuk-body" style="margin-bottom: 0;"><a href="#" class="govuk-link">Delete file</a></p>
-      </div>
-      <hr style="margin: 20px 0;">
-      <br>
-  </div>
-
-  <p class="govuk-label govuk-label--s">Upload a file</p>
-  <div class="container">
-      <p class="govuk-body text" style="margin-bottom: 0;">Drag and drop files here or</p>
-      <button type="button" class="govuk-button govuk-button--secondary button" data-module="govuk-button" onclick="showFilesAddedSection()">Choose file</button>
-  </div>
-</div>
-</div>
-<br><br>
-<hr style="border: 0.5px solid #000; margin: 10px 0;" class="govuk-grid-column-two-thirds">
-
-<br><br><br>
-
 
 
 <div class="govuk-grid-row">
 <div class="govuk-grid-column-two-thirds">
 
-<p class="govuk-label govuk-label--m">Payment evidence</p>
+<p class="govuk-label govuk-label--m">Financial evidence</p>
 <p class="govuk-body">For example, invoices, receipts and bank statements (you can cross out other transactions)</p>
 <p class="govuk-body" style="color: #505A5F;">Supported file types are PDF, DOC, DOCX, XLS, XLSX or JPG. Maximum file size is 20MB.</p><br>
 
