--- a/app/views/fetf/application/v1-0/about-items/livestock-information.html
+++ b/app/views/fetf/application/v1-0/about-items/livestock-information.html
@@ -13,6 +13,23 @@
 
 {% block content %}
 
+{% set show_page = false %}
+
+
+{% for item in selected_items %}
+    {% if item.category == "Livestock" %}
+        {% set show_page = true %}
+       
+    {% endif %}
+{% endfor %}
+
+
+
+    
+
+    
+
+
 <main class="govuk-main-wrapper">
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
@@ -69,3 +86,6 @@
 </main>
 
 {% endblock %}
+
+
+
