--- a/app/views/fetf/application/v1-0/about-items/livestock-information.html
+++ b/app/views/fetf/application/v1-0/about-items/livestock-information.html
@@ -13,14 +13,14 @@
 
 {% block content %}
 
+
+{% for item in data['selected-items'] %}
 {% set show_page = false %}
-
-
 {% for item in selected_items %}
     {% if item.category == "Livestock" %}
         {% set show_page = true %}
-       
     {% endif %}
+{% endfor %}
 {% endfor %}
 
 
