--- a/app/views/fetf/application/v1-0/business-details/farm-assurance.html
+++ b/app/views/fetf/application/v1-0/business-details/farm-assurance.html
@@ -33,12 +33,7 @@
               Select all that apply
             </div>
             <div class="govuk-checkboxes" data-module="govuk-checkboxes">
-              <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="assurance-scheme" name="assurance-scheme" type="checkbox" value="Not part of a farm assurance scheme">
-                <label class="govuk-label govuk-checkboxes__label" for="assurance-scheme">
-                  Not part of a farm assurance scheme
-                </label>
-              </div>
+              
               <div class="govuk-checkboxes__item">
                 <input class="govuk-checkboxes__input" id="assurance-scheme-2" name="assurance-scheme" type="checkbox" value="Red Tractor">
                 <label class="govuk-label govuk-checkboxes__label" for="assurance-scheme-2">
@@ -63,12 +58,7 @@
                   Soil Association
                 </label>
               </div>
-              <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="assurance-scheme-6" name="assurance-scheme" type="checkbox" value="Prefer not to say">
-                <label class="govuk-label govuk-checkboxes__label" for="assurance-scheme-6">
-                  Prefer not to say
-                </label>
-              </div>
+
               <div class="govuk-checkboxes__item">
                 <input class="govuk-checkboxes__input" id="assurance-scheme-7" name="assurance-scheme" type="checkbox" value="Other" data-aria-controls="conditional-contact-3">
                 <label class="govuk-label govuk-checkboxes__label" for="assurance-scheme-7">
@@ -83,6 +73,20 @@
                   <input class="govuk-input govuk-!-width-one-third" id="contact-by-text" name="contactByText" type="tel" autocomplete="tel">
                 </div>
               </div>
+              <div class="govuk-checkboxes__divider">or</div>
+              <div class="govuk-checkboxes__item">
+                <input class="govuk-checkboxes__input" id="assurance-scheme" name="assurance-scheme" type="checkbox" value="Not part of a farm assurance scheme">
+                <label class="govuk-label govuk-checkboxes__label" for="assurance-scheme">
+                  Not part of a farm assurance scheme
+                </label>
+              </div>
+              <div class="govuk-checkboxes__item">
+                <input class="govuk-checkboxes__input" id="assurance-scheme-6" name="assurance-scheme" type="checkbox" value="Prefer not to say">
+                <label class="govuk-label govuk-checkboxes__label" for="assurance-scheme-6">
+                  Prefer not to say
+                </label>
+              </div>
+              
             </div>
           </fieldset>
 
