--- a/app/views/fetf/application/v1-0/business-details/livestock-schemes.html
+++ b/app/views/fetf/application/v1-0/business-details/livestock-schemes.html
@@ -31,7 +31,9 @@
         <div id="livestock-schemes-hint" class="govuk-hint">
           We are collecting details for information purposes only. This may help future scheme design.
         </div>
-        <textarea class="govuk-textarea" id="livestock-schemes" name="livestockSchemes" aria-describedby="livestock-schemes-hint" rows="3"></textarea>
+        <input class="govuk-input" id="livestock-schemes" name="livestockSchemes" aria-describedby="livestock-schemes-hint" type="text">
+        <br><br>
+        <a href="#" class="govuk-link">Add another scheme</a>
       </div>
 
 
