--- a/app/views/fetf/application/v1-0/items/equipment.html
+++ b/app/views/fetf/application/v1-0/items/equipment.html
@@ -138,13 +138,24 @@
 <p class="govuk-body"><strong>Serial number:</strong> You must provide this item’s serial number when you submit your claim for payment.</p>
 {% endif %}
 
+{% if item.category and "Livestock" in item.category %}
+<div class="govuk-button-group">
+  <a href="/fetf/application/v1-0/about-items/livestock-information" method="get">
+    <button type="submit" class="govuk-button" data-module="govuk-button">
+    Select this item
+    </button>
+  </a>
+  {% else %}
 
+  
 <div class="govuk-button-group">
   <a href="/fetf/application/v1-0/item-quantity/{{ item.termName | lower | replace(' ', '-') }}" method="get">
     <button type="submit" class="govuk-button" data-module="govuk-button">
     Select this item
     </button>
   </a>
+  {% endif %}
+
   <a href="equipment-list">
     <button type="submit" class="govuk-button govuk-button--secondary" data-module="govuk-button" name="viewOtherItems">
     View other items
