--- a/app/views/fetf/application/v1-0/about-items/equipment-summary.html
+++ b/app/views/fetf/application/v1-0/about-items/equipment-summary.html
@@ -20,7 +20,7 @@
 
     <form action="/fetf-items-summary" method="post">
 
-    <h1 class="govuk-heading-l">Item summary</h1>
+    <h1 class="govuk-heading-l">Items summary</h1>
 
     
 
