--- a/app/views/fetf/application/v1-0/business-details/business-structure.html
+++ b/app/views/fetf/application/v1-0/business-details/business-structure.html
@@ -26,7 +26,7 @@
           <fieldset class="govuk-fieldset" aria-describedby="business-structure-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
               <h2 class="govuk-fieldset__heading">
-                Which of these best describes your business structure? / Who is applying?
+                Who is applying?
               </h2>
             </legend>
             <!-- <div id="business-structure-hint" class="govuk-hint">
@@ -62,7 +62,7 @@
           </label>
         </h2>
         <div id="employees-number-hint" class="govuk-hint">
-          Full-time employees, including the owner.
+          Full-time employees, including the owner
         </div>
         <input class="govuk-input govuk-input--width-5" id="employees-number" name="employeesNumber" type="text" spellcheck="false" aria-describedby="employees-number-hint" inputmode="numeric">
       </div>
