--- a/app/views/fetf/application/v1-0/business-details/land-details.html
+++ b/app/views/fetf/application/v1-0/business-details/land-details.html
@@ -25,13 +25,13 @@
       <div class="govuk-form-group">
         <fieldset class="govuk-fieldset" aria-describedby="contact-hint">
           <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-            
+            <span class="govuk-caption-l">About your business</span>
             <h1 class="govuk-fieldset__heading">
-              Land details
+              What do you use your land for?
             </h1>
           </legend>
           <div id="contact-hint" class="govuk-hint">
-            Select all options that are relevant to you. Enter your hectares rounded to the approximate whole number in digits.
+            Select all that apply. Enter approximate hectares in whole number.
           </div>
           <div class="govuk-checkboxes" data-module="govuk-checkboxes">
             <div class="govuk-checkboxes__item">
@@ -87,7 +87,7 @@
               
               <div class="govuk-form-group">
                 <label class="govuk-label" for="width-4">
-                  Relevant land parcel IDs
+                  Enter relevant land parcel IDs, for example 3903
                 </label>
                 <input class="govuk-input govuk-input--width-4" id="width-4" name="width4" type="text">
                 
