--- a/app/views/fetf/application/v1-0/about-items/equipment-summary.html
+++ b/app/views/fetf/application/v1-0/about-items/equipment-summary.html
@@ -16,7 +16,7 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-    <span class="govuk-caption-l">About your items</span>
+    <span class="govuk-caption-l">Apply</span>
 
     <form action="/fetf-items-summary" method="post">
 
