--- a/app/views/fetf/application/v1-0/applicant-business-details/check-your-details.html
+++ b/app/views/fetf/application/v1-0/applicant-business-details/check-your-details.html
@@ -17,7 +17,8 @@
   <div class="govuk-grid-column-two-thirds">
 
     <form action="/fetf/activity-list/v2-0/index?fetf-status=01a&fetf-apply=01&fetf-agree=01&fetf-claim=01" method="post">
-      <span class="govuk-caption-l">Applicant and business details</span>
+    
+      <span class="govuk-caption-l">Apply</span>
     <h1 class="govuk-heading-l">Check your details</h1>
 
     <!-- <p class="govuk-body">Changes in this section will update your Rural Payments service account.</p> -->
