--- a/app/views/fetf/application/v1-0/business-details/business-structure.html
+++ b/app/views/fetf/application/v1-0/business-details/business-structure.html
@@ -19,7 +19,7 @@
 
     <form action="/fetf-business-structure" method="post">
 
-      <span class="govuk-caption-l">About your business</span>
+      <span class="govuk-caption-l">Apply</span>
       <h1 class="govuk-heading-l">Business structure</h1>
 
       <div class="govuk-form-group">
