--- a/app/views/fetf/application/v1-0/business-details/check-your-details.html
+++ b/app/views/fetf/application/v1-0/business-details/check-your-details.html
@@ -17,7 +17,7 @@
   <div class="govuk-grid-column-two-thirds">
 
     <form action="/fetf-check-business-details" method="post">
-      <span class="govuk-caption-l">About your business</span>
+      <span class="govuk-caption-l">Apply</span>
     <h1 class="govuk-heading-l">Check your details</h1>
 
     <!-- <p class="govuk-body">Changes in this section will update your Rural Payments service account.</p> -->
