--- a/app/views/fetf/application/v1-0/business-details/farm-assurance.html
+++ b/app/views/fetf/application/v1-0/business-details/farm-assurance.html
@@ -19,18 +19,18 @@
 
     <form action="/fetf-assurance-schemes" method="post">
 
-      <span class="govuk-caption-l">About your business</span>
-      <h1 class="govuk-heading-l">Farm assurance schemes</h1>
+      <span class="govuk-caption-l">Apply</span>
+     
 
       <div class="govuk-form-group">
           <fieldset class="govuk-fieldset" aria-describedby="assurance-scheme-hint">
-            <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
-              <h2 class="govuk-fieldset__heading">
-                Which farm assurance schemes do you belong to?
-              </h2>
+            <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+              <h1 class="govuk-fieldset__heading">
+                Which farm assurance schemes do you belong to? (optional)
+              </h1>
             </legend>
             <div id="assurance-scheme-hint" class="govuk-hint">
-              Select all that apply
+              Select all that apply. We use this information to help develop grant schemes.
             </div>
             <div class="govuk-checkboxes" data-module="govuk-checkboxes">
               
