--- a/app/views/fetf/application/v1-0/business-details/land-details.html
+++ b/app/views/fetf/application/v1-0/business-details/land-details.html
@@ -25,7 +25,7 @@
       <div class="govuk-form-group">
         <fieldset class="govuk-fieldset" aria-describedby="contact-hint">
           <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-            <span class="govuk-caption-l">About your business</span>
+            <span class="govuk-caption-l">Apply</span>
             <h1 class="govuk-fieldset__heading">
               What do you use your land for?
             </h1>
