--- a/app/views/fetf/_includes/activity-list_task-section_apply.html
+++ b/app/views/fetf/_includes/activity-list_task-section_apply.html
@@ -10,7 +10,7 @@
 
       <li class="govuk-task-list__item govuk-task-list__item--with-link">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="../../application/v1-0/applicant-business-details/check-your-details" aria-describedby="application-details-2-status">Applicant and business details</a>
+          <a class="govuk-link govuk-task-list__link" href="../../application/v1-0/applicant-business-details/check-your-details" aria-describedby="application-details-2-status">Check your details</a>
         </div>
         <div class="govuk-task-list__status" id="application-details-4-status">
           <strong class="govuk-tag govuk-tag--blue">
@@ -69,7 +69,7 @@
 
         <li class="govuk-task-list__item govuk-task-list__item--with-link">
           <div class="govuk-task-list__name-and-hint">
-            <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Applicant and business details</a>
+            <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Check your details</a>
           </div>
           <div class="govuk-task-list__status" id="application-details-4-status">
             Completed
@@ -128,7 +128,7 @@
 
     <li class="govuk-task-list__item govuk-task-list__item--with-link">
       <div class="govuk-task-list__name-and-hint">
-        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Applicant and business details</a>
+        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Check your details</a>
       </div>
       <div class="govuk-task-list__status" id="application-details-4-status">
         <strong class="govuk-tag govuk-tag--light-blue">
@@ -188,7 +188,7 @@
 
     <li class="govuk-task-list__item govuk-task-list__item--with-link">
       <div class="govuk-task-list__name-and-hint">
-        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Applicant and business details</a>
+        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Check your details</a>
       </div>
       <div class="govuk-task-list__status" id="application-details-4-status">
           Completed
@@ -247,7 +247,7 @@
 
     <li class="govuk-task-list__item govuk-task-list__item--with-link">
       <div class="govuk-task-list__name-and-hint">
-        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Applicant and business details</a>
+        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Check your details</a>
       </div>
       <div class="govuk-task-list__status" id="application-details-4-status">
           Completed
@@ -306,7 +306,7 @@
 
     <li class="govuk-task-list__item govuk-task-list__item--with-link">
       <div class="govuk-task-list__name-and-hint">
-        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Applicant and business details</a>
+        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Check your details</a>
       </div>
       <div class="govuk-task-list__status" id="application-details-4-status">
           Completed
@@ -364,7 +364,7 @@
 
     <li class="govuk-task-list__item govuk-task-list__item--with-link">
       <div class="govuk-task-list__name-and-hint">
-        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Applicant and business details</a>
+        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Check your details</a>
       </div>
       <div class="govuk-task-list__status" id="application-details-4-status">
           Completed
@@ -423,7 +423,7 @@
 
     <li class="govuk-task-list__item govuk-task-list__item--with-link">
       <div class="govuk-task-list__name-and-hint">
-        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Applicant and business details</a>
+        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Check your details</a>
       </div>
       <div class="govuk-task-list__status" id="application-details-4-status">
           Completed
@@ -481,7 +481,7 @@
 
     <li class="govuk-task-list__item govuk-task-list__item--with-link">
       <div class="govuk-task-list__name-and-hint">
-        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Applicant and business details</a>
+        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Check your details</a>
       </div>
       <div class="govuk-task-list__status" id="application-details-4-status">
           Completed
@@ -537,7 +537,7 @@
 
       <li class="govuk-task-list__item govuk-task-list__item--with-link">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Applicant and business details</a>
+          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Check your details</a>
         </div>
         <div class="govuk-task-list__status" id="application-details-4-status">
             Completed
@@ -603,7 +603,7 @@
 
     <li class="govuk-task-list__item govuk-task-list__item--with-link">
       <div class="govuk-task-list__name-and-hint">
-        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Applicant and business details</a>
+        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Check your details</a>
       </div>
       <div class="govuk-task-list__status" id="application-details-4-status">
           Completed
