--- a/app/views/fetf/application/v1-0/about-items/equipment-address.html
+++ b/app/views/fetf/application/v1-0/about-items/equipment-address.html
@@ -20,7 +20,7 @@
     <form action="/fetf-items-business-address" method="post">
 
     <div class="govuk-form-group">
-      <span class="govuk-caption-l">About your items</span>
+      <span class="govuk-caption-l">Apply</span>
       <fieldset class="govuk-fieldset">
         <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
           Will you store the items at the main business address?
