--- a/app/views/fetf/application/v1-0/items/equipment-list.html
+++ b/app/views/fetf/application/v1-0/items/equipment-list.html
@@ -15,8 +15,8 @@
 <main class="govuk-main-wrapper">
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <span class="govuk-caption-xl">Improving Farm Productivity Grant 2024 - Round 1</span>
-      <h1 class="govuk-heading-xl" style="margin-bottom:30px;">Select items</h1>
+      <span class="govuk-caption-l">Apply</span>
+      <h1 class="govuk-heading-l" style="margin-bottom:30px;">Select items</h1>
       <div class="govuk-inset-text">
         The minimum grant you can apply for is £1,000 and the maximum grant is £50,000.
       </div>
