--- a/app/views/fetf/application/v1-0/livestock-information.html
+++ b/app/views/fetf/application/v1-0/livestock-information.html
@@ -26,7 +26,7 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-    <form action="/fetf/application/v1-0/item-quantity/ram-pumps" method="post">
+    <form action="/fetf/application/v1-0/item-quantity/{{ item.termName | lower | replace(' ', '-') }}" method="post">
       
       <span class="govuk-caption-l">{{ item.title }} (FETF{{ item.itemCode }})</span>
       <h1 class="govuk-heading-l">Livestock items</h1>
