--- a/app/views/fetf/_includes/body-content_what-you-need-to-do-main-block.html
+++ b/app/views/fetf/_includes/body-content_what-you-need-to-do-main-block.html
@@ -10,5 +10,5 @@
     <p class="govuk-body">You must tell us as soon as possible if you cannot purchase the item you intended and cannot source it from another supplier or if you cannot meet the claim deadline.</p>
     <p class="govuk-body">We will consider amendment requests on a case-by-case basis. You must be able to demonstrate you have taken all reasonable steps to source the items within a realistic timeframe.</p>
     <p class="govuk-body">If you cannot buy an item, your application must still be above the minimum grant amount of £1,000.</p>
-    <p class="govuk-body">The revised total score must still be more than the minimum threshold for the round. If you fall below this score this application will no longer be eligible for funding. The cut off score for FETF 2023 was 75%.</p>
+    <p class="govuk-body">The revised total score must still be more than the minimum threshold for the round. If you fall below this score this application will no longer be eligible for funding.</p>
 </span>
